Adding some of my work

--- a/project/project.ipynb
+++ b/project/project.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project: mental health in Switzerland"
+    "# Project: Mental health in Switzerland"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "@oth: Getting the dataset from teh cluster..."
    ]
   },
   {
@@ -18,21 +26,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### dataset 1"
+    "We were provided to separate datasets containing swiss tweets. They were formated differently and contained different field and while one was over the duration of multiple years the other only covers a span of 10 months.\n",
+    "\n",
+    "We preform an analysis of both in order to be able to decide which one should be used in out project."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### data set 2"
+    "### dataset 1 (twitter-swisscom)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### conclusion"
+    "The dataset comes with a *txt schema*, giving us an idea of what each column in the *tsv file* containing the tweets represents."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The dataset contains the following usefull columns:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The complete analysis and code can be found in the [Basic Exploration dataset 1 notebook](Basic%20Exploration%20Dataset%201.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### data set 2 (from Spinner)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### conclusion\n",
+    "\n",
+    "After the analysis of datset 2 we decided to use **dataset 2** for our project.\n",
+    "\n",
+    "While dataset 1 containes more precise location information in the form of longitude and latitude, dataset 2 contains a sentiment analysis field as well as a language field.\n",
+    "\n",
+    "As trying to categorize the language of each tweet in dataset 1 was quite computationaly expensive –having to deal with network latency of api requiest– and a lot of preprocessing was necessary to get it to work, dataset 2 containing this field puts it at a clear advantage."
    ]
   },
   {
@@ -283,6 +328,13 @@
    "metadata": {},
    "source": [
     "http://nadbordrozd.github.io/blog/2016/05/20/text-classification-with-word2vec/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://docs.google.com/spreadsheets/d/1WwI9crZk36pcTOQ1g_5dumMd11OlkpFRNHsEvpkwLMk/edit?usp=sharing"
    ]
   }
  ],
