--- a/project/project.ipynb
+++ b/project/project.ipynb
@@ -84,77 +84,148 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. datset cleaning"
+    "## 2. Datset Cleaning"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "explain that we began with pandas (local proof of concept) and scaled up using spark"
+    "Now that we have done all of the data exploring, we have to clean the data to be able to use it correctly for the rest of the project.\n",
+    "\n",
+    "First, we use Pandas on a small subset of the dataset and locally, so as to be able to make sure all functions work as expected and to test them out. Later on, we use spark to be able to do the same operations on a bigger scale.\n",
+    "\n",
+    "Note that all functions discussed here can be found in the *JSON Clearing* notebook."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1 unnesting the json"
+    "### 2.1 Unnesting the JSON"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2 column selection"
+    "The first step is for us to have an unnested JSON, which basically means having a Pandas DataFrame, thus having the correct columns and the data for each of them. To do so,m we simply use the **json_normalize** function in Pandas. We also choose to take out all \"_source\" in the strings to have clearer and smaller column names."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.3 language filtering"
+    "### 2.2 Column Selection"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.4 sentiment analysis"
+    "Once we have a Dataframe, we choose the columns we think will be useful for the rest of the proejct. Thus, we found only ten columns that seem interesting to us.\n",
+    "\n",
+    "Those ten are:\n",
+    "\n",
+    "- **main**: contains the tweet (text) itself.\n",
+    "- **published**: time when the tweet was published.\n",
+    "- **source_spam_probability**: permits to determine if tweet is spam or not.\n",
+    "- **source_location**:  place where the tweet was published.\n",
+    "- **tags**: hashtags given in the tweet.\n",
+    "- **lang**: language of the tweet.\n",
+    "- **sentiment**: sentiment analysis of the tweet.\n",
+    "- **author_gender**: gender of the author.\n",
+    "- **source_followers**: number of followers.\n",
+    "- **source_following**: number of people they are following.\n",
+    "\n",
+    "Some of them will bring us interesting insights., For example: are men or women more prone to depression? Is someone with more followers happy? There are quite a few interesting questions that can thus be asked and later on answered with the information we choose to keep.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.5 spam removal"
+    "### 2.3 Language Filtering"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.6 time format encoding"
+    "Seeing as our project is mainly focused on Switzerland, we will make sure we only keep the tweets that are in languages spoken by the majority of Switzerland, which would mean French, German and Italian. Unfortunatley, as no one in the group speaks Italian, we decided to forfeit the language in favor of English. This has two reasons: first, a lot of people speak English on the Internet, as it is a global language; second, there is a large English-speaking community in Switzerland.\n",
+    "\n",
+    "Noite also that Swiss German is counted in the German part, even if some of the words are a little bit more peculiar. This will be taken into account in our dictionnaries later on."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.7 text treatment"
+    "### 2.4 Sentiment Analysis"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "lowercase, normalize (unicode)"
+    "Seeing as we were provided with a dataset that has a sentiment analysis, we use it to be able to drop all tweets that have a **positive** result. Seeing as we want to find depression and other mental illnesses, we are mostly searching for negative or neutral tweets. \n",
+    "\n",
+    "It could be that the sentiment analysis does have a few false positives (for example, the use of a smiling face could be used saracastically and thus making the result of the analysis be positive), but we decide to trust the data that was given and not double-check."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "url removal, RT removal"
+    "### 2.5 Spam Removal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Spam is not relevant to any of our objectives, thus, we decide to drop all the tweets having a greater value than 0.5 in the **source_spam_probability** column. Once again, we decide to trust the algorithm giving us this data.\n",
+    "\n",
+    "We chose a 50% threshold because... ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.6 Time Format Encoding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To be able to use the time in some analysis (to find seasonal patterns in depression for example), we also need the dates to all be properly formatted. Thus, we decided to reformat all the dates in the column **published** to be certain to be able to use them later on."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.7 Text Treatment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have only the tweets that interest us remaining, we need to do a little bit of cleaning in the **main** column. Indeed, to be able to process the text and find patterns or any other information that we could seek.\n",
+    "\n",
+    "First, we remove all URLs and images. As we do not have any image processing, the pictures are not useful. As for the links, some information might be relevant (for example the title of an article if it is to be found in the URL) but most of it isn't.\n",
+    "\n",
+    "We also remove all non-alphanumeric characters, as they are will not give more information and might get in the way of the text analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once this is done, we will use usual functions for text treatment. Thus we the **NLP library** to be able to remove stopwords (*the*, *and*, ... in English for example) from a given language. We also use the stemmer, which gives us the root of any word (ending would become end, beginning would become begin) thus making it easier to make comparaisons with the dictionnaries we created. "
    ]
   },
   {
@@ -340,7 +411,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -354,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
