Adding my changes

--- a/project/Basic Exploration Dataset 1.ipynb
+++ b/project/Basic Exploration Dataset 1.ipynb
@@ -893,6 +893,13 @@
    "source": [
     "df.show(n=4, truncate=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As an alternative dataset was later povided we did not preform any more tasks on spark, as we will be using the other dataset provided."
+   ]
   }
  ],
  "metadata": {
