--- a/project/project.ipynb
+++ b/project/project.ipynb
@@ -12,7 +12,29 @@
    "metadata": {},
    "source": [
     "\n",
-    "@oth: Getting the dataset from teh cluster..."
+    "@oth: Describe getting the dataset from the cluster..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We quickly import the libraries to be used later:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import pyspark as ps\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from pandas.io.json import json_normalize\n",
+    "import json"
    ]
   },
   {
@@ -28,7 +50,15 @@
    "source": [
     "We were provided to separate datasets containing swiss tweets. They were formated differently and contained different field and while one was over the duration of multiple years the other only covers a span of 10 months.\n",
     "\n",
-    "We preform an analysis of both in order to be able to decide which one should be used in out project."
+    "We preform an analysis of both in order to be able to decide which one should be used in out project.\n",
+    "\n",
+    "After the analysis of datset 2 we decided to use **dataset 2** for our project.\n",
+    "\n",
+    "While dataset 1 containes more precise location information in the form of longitude and latitude, dataset 2 contains a sentiment analysis field as well as a language field.\n",
+    "\n",
+    "As trying to categorize the language of each tweet in dataset 1 was quite computationaly expensive –having to deal with network latency of api requests– and a lot of preprocessing was necessary to get it to work, dataset 2 containing this field puts it at a clear advantage.\n",
+    "\n",
+    "We still provide a quick overview of dataset 1."
    ]
   },
   {
@@ -50,7 +80,24 @@
    "metadata": {},
    "source": [
     "The dataset contains the following usefull columns:\n",
-    "\n"
+    "\n",
+    "- userId : id identifying user\n",
+    "- createdAt : time of posting tweet\n",
+    "- text : content of tweet\n",
+    "- placeLatitude : latitude of tweet\n",
+    "- placeLongitude : longitude of tweet\n",
+    "- sourceName : username\n",
+    "- sourceUrl : url of tweet\n",
+    "- followersCount : number of followers\n",
+    "- friendsCount : number of mutuals\n",
+    "- statusesCount : number of statuses of user"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "the sample dataset contains a lot of nan values, and each column contains at least 1% or more nan values."
    ]
   },
   {
@@ -64,20 +111,145 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### data set 2 (from Spinner)"
+    "### data set 2 (from Spinner)\n",
+    "\n",
+    "This dataset has a elaborate description of each field available at the [spinn3r website](http://docs.spinn3r.com/?Example#content-schema).\n",
+    "This dataset is in json format.\n",
+    "\n",
+    "To deal with the amount of data present in the cluster we look at 1 day to preform our first analysis and then show how to scale up.\n",
+    "\n",
+    "The format of this dataset is a nested json that we could not find how to extract dirrectly using the read json funtion provided. We thus use a json normalizer contained in the pandas libary to extract it. We will later see that spark deals better with nested json."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### conclusion\n",
+    "The fields found in this dataset are:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "EXAMPLE_PATH = 'swiss-tweet/example.json'\n",
     "\n",
-    "After the analysis of datset 2 we decided to use **dataset 2** for our project.\n",
+    "with open(EXAMPLE_PATH) as data_file:    \n",
+    "    data = json.load(data_file)\n",
     "\n",
-    "While dataset 1 containes more precise location information in the form of longitude and latitude, dataset 2 contains a sentiment analysis field as well as a language field.\n",
+    "twitter_df = json_normalize(data)\n",
+    "#rename columns for convenience\n",
+    "twitter_df.columns = [ column.replace('_source.','') for column in twitter_df.columns]\n",
+    "twitter_df.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Out of these columns, the one we can use are:\n",
+    "- main: contains the content of the tweet\n",
+    "- published: gives the time on which the content was posted\n",
+    "- source_spam_probability: probability of tweet being spam\n",
+    "- source_location: location of tweet\n",
+    "- tags: tags associated with tweet, as provided by spinn3r\n",
+    "- lang: language of tweet\n",
+    "- sentiment: sentiment score of tweet -POSITIVE, NEGATIVE, NEUTRAL-\n",
+    "- author_gender: gender of author -MALE, FEMALE, UNKNOWN-\n",
+    "- source_followers: followers of user who tweeted\n",
+    "- source_following: number of mutual followers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns = ['main', 'published', 'source_spam_probability', 'source_location', 'tags', 'lang', 'sentiment',\n",
+    "                   'author_gender', 'source_followers', 'source_following']\n",
+    "twitter_df = twitter_df[columns]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now look at general distributions in this dataset. While this example isn't representative when it comes to the tweets –especially given it contains tweets of the 1th of january– it can still give us insights on the other fields.\n",
     "\n",
-    "As trying to categorize the language of each tweet in dataset 1 was quite computationaly expensive –having to deal with network latency of api requiest– and a lot of preprocessing was necessary to get it to work, dataset 2 containing this field puts it at a clear advantage."
+    "We assume that roughtly the same categories of users were active on that day, so we can draw conclusions on the distribution of language, gender."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The language distribution is the following:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "twitter_df['lang'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see that english, french and german are most frequent. This is good as those are the languages we plan on using."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now look at the distribution of gender in the dataset:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "twitter_df['author_gender'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see that most accounts do not seem to contain this information.  But there are still a lot that do, so we could use the ones that do to look at differences between gender, although it would not give use an unbiased set, as the type of user declaring their gender on twitter may be different than those who chose not to."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now look at the sentiment column, to see how the tweets were labeled."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "twitter_df['sentiment'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see that the vast majority of tweets was labeled as neutral, and only a very small number are labeled ad negative. We will this look at both neutral and negatively labeled tweets.\n",
+    "Under the assumption that the positives are not false positives, a tweet showing signs of mental distress will not be labeled as POSITIVE, hence we can safely exclude these tweets from further analysis."
    ]
   },
   {
@@ -292,49 +464,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "http://nbviewer.jupyter.org/gist/mizvol/eb24770ac3d5d598463f972e2a669f03"
+    "[2] http://nbviewer.jupyter.org/gist/mizvol/eb24770ac3d5d598463f972e2a669f03"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://spark.apache.org/docs/2.1.0/ml-features.html"
+    "[3] https://spark.apache.org/docs/2.1.0/ml-features.html"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "http://nadbordrozd.github.io/blog/2016/05/20/text-classification-with-word2vec/"
+    "[4] http://nadbordrozd.github.io/blog/2016/05/20/text-classification-with-word2vec/"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://www.rand.org/content/dam/rand/pubs/rgs_dissertations/RGSD300/RGSD391/RAND_RGSD391.pdf"
+    "[5] https://www.rand.org/content/dam/rand/pubs/rgs_dissertations/RGSD300/RGSD391/RAND_RGSD391.pdf"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://www.aaai.org/ocs/index.php/ICWSM/ICWSM11/paper/viewFile/2880/3264"
+    "[6] https://www.aaai.org/ocs/index.php/ICWSM/ICWSM11/paper/viewFile/2880/3264"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "http://nadbordrozd.github.io/blog/2016/05/20/text-classification-with-word2vec/"
+    "[7] http://nadbordrozd.github.io/blog/2016/05/20/text-classification-with-word2vec/"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://docs.google.com/spreadsheets/d/1WwI9crZk36pcTOQ1g_5dumMd11OlkpFRNHsEvpkwLMk/edit?usp=sharing"
+    "[8] https://docs.google.com/spreadsheets/d/1WwI9crZk36pcTOQ1g_5dumMd11OlkpFRNHsEvpkwLMk/edit?usp=sharing"
    ]
   }
  ],
