--- a/project/project.ipynb
+++ b/project/project.ipynb
@@ -48,17 +48,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We were provided to separate datasets containing swiss tweets. They were formated differently and contained different field and while one was over the duration of multiple years the other only covers a span of 10 months.\n",
+    "The goal of this first analysis is to familiarize ourselves with the dataset inorder the know if we need to adapt our research question or enrich the dataset with external information in order to preform our analysis.\n",
     "\n",
-    "We preform an analysis of both in order to be able to decide which one should be used in out project.\n",
-    "\n",
-    "After the analysis of datset 2 we decided to use **dataset 2** for our project.\n",
+    "We were provided two separate datasets containing swiss tweets. They were formated differently and contained different fields and while one was over the duration of multiple years the other only covers a span of 10 months.\n",
+    "We performed an analysis of both in order to be able to decide which one should be used in out project.\n",
+    "After the analysis both sets we decided to use **dataset 2** for our project.\n",
     "\n",
     "While dataset 1 containes more precise location information in the form of longitude and latitude, dataset 2 contains a sentiment analysis field as well as a language field.\n",
     "\n",
     "As trying to categorize the language of each tweet in dataset 1 was quite computationaly expensive –having to deal with network latency of api requests– and a lot of preprocessing was necessary to get it to work, dataset 2 containing this field puts it at a clear advantage.\n",
     "\n",
-    "We still provide a quick overview of dataset 1."
+    "We now provide a quick overview of dataset 1."
    ]
   },
   {
@@ -72,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The dataset comes with a *txt schema*, giving us an idea of what each column in the *tsv file* containing the tweets represents."
+    "The dataset comes with a *txt schema*, giving us an idea of what each column in the *tsv file* containing the tweets represents. A sample file was given, but we optained the complete set of tweets (5gb) via a .zip."
    ]
   },
   {
@@ -114,9 +114,9 @@
     "### data set 2 (from Spinner)\n",
     "\n",
     "This dataset has a elaborate description of each field available at the [spinn3r website](http://docs.spinn3r.com/?Example#content-schema).\n",
-    "This dataset is in json format.\n",
+    "Unlike the previous dataset, this dataset is given in json format.\n",
     "\n",
-    "To deal with the amount of data present in the cluster we look at 1 day to preform our first analysis and then show how to scale up.\n",
+    "To deal with the amount of data present in the cluster we look at one day to perform our first analysis and then show how to scale up.\n",
     "\n",
     "The format of this dataset is a nested json that we could not find how to extract dirrectly using the read json funtion provided. We thus use a json normalizer contained in the pandas libary to extract it. We will later see that spark deals better with nested json."
    ]
@@ -250,6 +250,135 @@
    "source": [
     "We see that the vast majority of tweets was labeled as neutral, and only a very small number are labeled ad negative. We will this look at both neutral and negatively labeled tweets.\n",
     "Under the assumption that the positives are not false positives, a tweet showing signs of mental distress will not be labeled as POSITIVE, hence we can safely exclude these tweets from further analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looking at the spam probabality we see that not a single tweet was labeled as spam. This puts into question the accuracy of the labeling, as the set of tweets on that day most certainly contains spam. We will still use it, as we assume the chanse of false positives is is low, so we lose nothing by using it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "twitter_df['source_spam_probability'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now examine the locations provided by the dataset:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#we only look at the locations for the languages we care about, as location seems to be language dependent\n",
+    "twitter_df[twitter_df.lang.isin(['de', 'fr', 'en'])]['source_location'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see that:\n",
+    "- there are a lot of locations that are the same but in a different language, such as Switzerland and Schweiz\n",
+    "- the names of the locations are not just in the languages we are interessted in (see สวิตเซอร์แลนด์)\n",
+    "- a vast majority of the dataset is just labeled as 'switzerland'\n",
+    "- but as opposed to dataset 1, they are all located in switzerland"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "twitter_df.count() #give us number of NAN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### looking at the tweets\n",
+    "\n",
+    "while this set of tweets is not representative we can still use it to find potential issues we might have with the tweet content:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.set_option('display.max_colwidth', -1)\n",
+    "twitter_df.sample(n=10)['main']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We immediatly see that the tweets containing links are not relevant to our research question, as they are mostly news or adds. We make the assumption that this would be the case anytime of the year.\n",
+    "\n",
+    "We look at the tweets containing links and confirm:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "twitter_df.main[twitter_df.main.map(lambda x: 'http://' in x)].head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now preform a vastly simplified version of the dictionary matching we will preform to get relevant tweets and analyze the results:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.set_option('display.max_colwidth', 100)\n",
+    "twitter_df[twitter_df['main'].map(lambda x: 'suic' in x) ]['main'] #news instead of personal reference\n",
+    "#removing nres would be good\n",
+    "#we also see that we should remove pic.twit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.set_option('display.max_colwidth', 100)\n",
+    "twitter_df[twitter_df['main'].map(lambda x: 'therapie' in x) ]['main'] #adds instead of personal reference\n",
+    "#all contain links..reason to remove links"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "twitter_df[twitter_df['main'].map(lambda x: 'therapie' in x) ]['main']"
    ]
   },
   {
@@ -457,56 +586,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[1] https://github.com/master/spark-stemming"
+    "[1] https://github.com/master/spark-stemming preforming stemming with spark"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[2] http://nbviewer.jupyter.org/gist/mizvol/eb24770ac3d5d598463f972e2a669f03"
+    "[2] http://nbviewer.jupyter.org/gist/mizvol/eb24770ac3d5d598463f972e2a669f03 example dataprocessing pipeline"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[3] https://spark.apache.org/docs/2.1.0/ml-features.html"
+    "[3] https://spark.apache.org/docs/2.1.0/ml-features.html ml methods we can use with spark"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[4] http://nadbordrozd.github.io/blog/2016/05/20/text-classification-with-word2vec/"
+    "[4] http://nadbordrozd.github.io/blog/2016/05/20/text-classification-with-word2vec/ best ways to do text classification"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[5] https://www.rand.org/content/dam/rand/pubs/rgs_dissertations/RGSD300/RGSD391/RAND_RGSD391.pdf"
+    "[5] https://www.rand.org/content/dam/rand/pubs/rgs_dissertations/RGSD300/RGSD391/RAND_RGSD391.pdf dissertation containing dict 1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[6] https://www.aaai.org/ocs/index.php/ICWSM/ICWSM11/paper/viewFile/2880/3264"
+    "[6] https://www.aaai.org/ocs/index.php/ICWSM/ICWSM11/paper/viewFile/2880/3264 public health paper, LDA usage"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[7] http://nadbordrozd.github.io/blog/2016/05/20/text-classification-with-word2vec/"
+    "[7] https://docs.google.com/spreadsheets/d/1WwI9crZk36pcTOQ1g_5dumMd11OlkpFRNHsEvpkwLMk/edit?usp=sharing our dictionary"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[8] https://docs.google.com/spreadsheets/d/1WwI9crZk36pcTOQ1g_5dumMd11OlkpFRNHsEvpkwLMk/edit?usp=sharing"
+    "[8] https://getd.libs.uga.edu/pdfs/kale_sayali_s_201512_ms.pdf second thesis containing dict"
    ]
   }
  ],
