Adding some text, adding run.py

--- a/project/project.ipynb
+++ b/project/project.ipynb
@@ -346,7 +346,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We now preform a vastly simplified version of the dictionary matching we will preform to get relevant tweets and analyze the results:"
+    "We now preform a vastly simplified version of the dictionary matching we will preform to get relevant tweets and analyze the results.\n",
+    "\n",
+    "Here we look at the occurence of 'suicide' in the tweet:"
    ]
   },
   {
@@ -356,9 +358,23 @@
    "outputs": [],
    "source": [
     "pd.set_option('display.max_colwidth', 100)\n",
-    "twitter_df[twitter_df['main'].map(lambda x: 'suic' in x) ]['main'] #news instead of personal reference\n",
+    "twitter_df[twitter_df['main'].map(lambda x: 'suicide' in x) ]['main'] #news instead of personal reference\n",
     "#removing nres would be good\n",
-    "#we also see that we should remove pic.twit"
+    "#we also see that we should not remove pic.twit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see that a lot of these tweets contains news, we should remove the links in order to get a better result."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we look at therapy (in german), again this confirms the issues with links"
    ]
   },
   {
@@ -367,18 +383,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.set_option('display.max_colwidth', 100)\n",
     "twitter_df[twitter_df['main'].map(lambda x: 'therapie' in x) ]['main'] #adds instead of personal reference\n",
     "#all contain links..reason to remove links"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally we look at the tweets that are retweets, to get an idea if they could be useful.\n",
+    "From what we see, and what others [8] have seen they are not."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "twitter_df[twitter_df['main'].map(lambda x: 'therapie' in x) ]['main']"
+    "twitter_df[twitter_df['main'].map(lambda x: 'RT ' in x) ]['main'].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using this analysis we apply the gained knowledge and start to clean the data."
    ]
   },
   {
@@ -712,7 +742,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -726,7 +756,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
