--- a/project/project.ipynb
+++ b/project/project.ipynb
@@ -25,16 +25,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import pickle as pkl\n",
     "import pyspark as ps\n",
     "import matplotlib.pyplot as plt\n",
+    "import unicodedata\n",
+    "import json\n",
     "\n",
-    "from pandas.io.json import json_normalize\n",
-    "import json"
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem.snowball import SnowballStemmer\n",
+    "from pandas.io.json import json_normalize"
    ]
   },
   {
@@ -131,7 +137,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "EXAMPLE_PATH = 'swiss-tweet/example.json'\n",
@@ -165,7 +173,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "columns = ['main', 'published', 'source_spam_probability', 'source_location', 'tags', 'lang', 'sentiment',\n",
@@ -192,7 +202,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "twitter_df['lang'].value_counts()"
@@ -215,7 +227,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "twitter_df['author_gender'].value_counts()"
@@ -238,7 +252,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "twitter_df['sentiment'].value_counts()"
@@ -262,7 +278,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "twitter_df['source_spam_probability'].value_counts()"
@@ -278,7 +296,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#we only look at the locations for the languages we care about, as location seems to be language dependent\n",
@@ -299,7 +319,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "twitter_df.count() #give us number of NAN"
@@ -317,7 +339,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pd.set_option('display.max_colwidth', -1)\n",
@@ -336,7 +360,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "twitter_df.main[twitter_df.main.map(lambda x: 'http://' in x)].head(10)"
@@ -354,7 +380,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pd.set_option('display.max_colwidth', 100)\n",
@@ -380,7 +408,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "twitter_df[twitter_df['main'].map(lambda x: 'therapie' in x) ]['main'] #adds instead of personal reference\n",
@@ -398,7 +428,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "twitter_df[twitter_df['main'].map(lambda x: 'RT ' in x) ]['main'].head()"
@@ -424,9 +456,7 @@
    "source": [
     "Now that we have done all of the data exploring, we have to clean the data to be able to use it correctly for the rest of the project.\n",
     "\n",
-    "First, we use Pandas on a small subset of the dataset and locally, so as to be able to make sure all functions work as expected and to test them out. Later on, we use spark to be able to do the same operations on a bigger scale.\n",
-    "\n",
-    "Note that all functions discussed here can be found in the *JSON Clearing* notebook."
+    "First, we use Pandas on a small subset of the dataset and locally, so as to be able to make sure all functions work as expected and to test them out. Later on, we use spark to be able to do the same operations on a bigger scale."
    ]
   },
   {
@@ -441,6 +471,21 @@
    "metadata": {},
    "source": [
     "The first step is for us to have an unnested JSON, which basically means having a Pandas DataFrame, thus having the correct columns and the data for each of them. To do so,m we simply use the **json_normalize** function in Pandas. We also choose to take out all \"_source\" in the strings to have clearer and smaller column names."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "EXAMPLE_PATH = 'swiss-tweet/example.json'\n",
+    "with open(EXAMPLE_PATH) as data_file:    \n",
+    "    example = json.load(data_file)\n",
+    "cleaned = json_normalize(example)\n",
+    "cleaned.columns = [column.replace('_source.','') for column in cleaned.columns]"
    ]
   },
   {
@@ -473,6 +518,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Only keeping the necessary columns\n",
+    "cleaned = cleaned[['main', 'published', 'source_spam_probability', 'source_location', 'tags', 'lang', 'sentiment',\n",
+    "                   'author_gender', 'source_followers', 'source_following']]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -486,6 +544,19 @@
     "Seeing as our project is mainly focused on Switzerland, we will make sure we only keep the tweets that are in languages spoken by the majority of Switzerland, which would mean French, German and Italian. Unfortunatley, as no one in the group speaks Italian, we decided to forfeit the language in favor of English. This has two reasons: first, a lot of people speak English on the Internet, as it is a global language; second, there is a large English-speaking community in Switzerland.\n",
     "\n",
     "Noite also that Swiss German is counted in the German part, even if some of the words are a little bit more peculiar. This will be taken into account in our dictionnaries later on."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "lang_mask = (cleaned['lang'] != 'de') & (cleaned['lang'] != 'fr') & (cleaned['lang'] != 'en')\n",
+    "cleaned.drop(cleaned[lang_mask].index, inplace=True)\n",
+    "cleaned.reset_index(drop=True, inplace=True)"
    ]
   },
   {
@@ -505,6 +576,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sent_mask = (cleaned['sentiment'] == 'POSITIVE')\n",
+    "cleaned.drop(cleaned[sent_mask].index, inplace=True)\n",
+    "cleaned.reset_index(drop=True, inplace=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -517,7 +601,20 @@
    "source": [
     "Spam is not relevant to any of our objectives, thus, we decide to drop all the tweets having a greater value than 0.5 in the **source_spam_probability** column. Once again, we decide to trust the algorithm giving us this data.\n",
     "\n",
-    "We chose a 50% threshold because... ?"
+    "We chose a 50% threshold as it follows the maximum likelihood rule: it is likely to be spam if it has more than 50% chance to be spam."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "spam_mask = (cleaned['source_spam_probability'] >= 0.5)\n",
+    "cleaned.drop(cleaned[spam_mask].index, inplace=True)\n",
+    "cleaned.reset_index(drop=True, inplace=True)"
    ]
   },
   {
@@ -535,6 +632,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cleaned['published'] = pd.to_datetime(cleaned['published'])\n",
+    "cleaned['published'].head(10)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -547,9 +656,43 @@
    "source": [
     "Now that we have only the tweets that interest us remaining, we need to do a little bit of cleaning in the **main** column. Indeed, to be able to process the text and find patterns or any other information that we could seek.\n",
     "\n",
-    "First, we remove all URLs and images. As we do not have any image processing, the pictures are not useful. As for the links, some information might be relevant (for example the title of an article if it is to be found in the URL) but most of it isn't.\n",
+    "First we put everything in lowercase to be able to make comapraisons between words without having problems with different representation between the same letter in uppercase and lowercase."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cleaned['main'] = cleaned['main'].astype(str).str.lower().\\\n",
+    "                    apply(lambda tweet: unicodedata.normalize('NFD', tweet).\\\n",
+    "                    encode('ascii', 'ignore').decode('utf-8'))\n",
+    "cleaned['main'].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then, we remove all URLs and images. As we do not have any image processing, the pictures are not useful. As for the links, some information might be relevant (for example the title of an article if it is to be found in the URL) but most of it isn't.\n",
     "\n",
     "We also remove all non-alphanumeric characters, as they are will not give more information and might get in the way of the text analysis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cleaned['main'] = cleaned['main'].str.replace(\"www\\S+\", '').str.replace(\"http\\S+\", '').\\\n",
+    "                    str.replace(\"pic.twitter\\S+\", '').str.replace('[^\\w\\s]', '')\n",
+    "cleaned['main'].head()"
    ]
   },
   {
@@ -557,6 +700,41 @@
    "metadata": {},
    "source": [
     "Once this is done, we will use usual functions for text treatment. Thus we the **NLP library** to be able to remove stopwords (*the*, *and*, ... in English for example) from a given language. We also use the stemmer, which gives us the root of any word (ending would become end, beginning would become begin) thus making it easier to make comparaisons with the dictionnaries we created. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def process_words(language):\n",
+    "    lang = language[:2]\n",
+    "    if language == 'german':\n",
+    "        lang = 'de'\n",
+    "    \n",
+    "    stemmer = SnowballStemmer(language)\n",
+    "    lang_set = stopwords.words(language)\n",
+    "        \n",
+    "    cleaned.loc[cleaned['lang'] == lang, 'main'] = cleaned.loc[cleaned['lang'] == lang, 'main'].str.split().\\\n",
+    "        apply(lambda tweet: [word for word in tweet if word not in lang_set]).\\\n",
+    "        apply(lambda tweet: [stemmer.stem(word) for word in tweet])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "process_words('english')\n",
+    "process_words('french')\n",
+    "process_words('german')\n",
+    "cleaned['main'].head()"
    ]
   },
   {
@@ -742,7 +920,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -756,7 +934,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
