--- a/project/project.ipynb
+++ b/project/project.ipynb
@@ -11,21 +11,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "@oth: Describe getting the dataset from the cluster..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "We quickly import the libraries to be used later:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -41,7 +35,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. dataset selection & analysis"
+    "## 0. Datasets retrieval"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "@oth: Describe getting the dataset from the cluster..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Dataset selection & analysis"
    ]
   },
   {
@@ -65,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### dataset 1 (twitter-swisscom)"
+    "### Dataset 1 (twitter-swisscom)"
    ]
   },
   {
@@ -111,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### data set 2 (from Spinner)\n",
+    "### Dataset 2 (from Spinn3r)\n",
     "\n",
     "This dataset has a elaborate description of each field available at the [spinn3r website](http://docs.spinn3r.com/?Example#content-schema).\n",
     "Unlike the previous dataset, this dataset is given in json format.\n",
@@ -131,7 +139,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "EXAMPLE_PATH = 'swiss-tweet/example.json'\n",
@@ -165,7 +175,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "columns = ['main', 'published', 'source_spam_probability', 'source_location', 'tags', 'lang', 'sentiment',\n",
@@ -192,7 +204,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "twitter_df['lang'].value_counts()"
@@ -215,7 +229,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "twitter_df['author_gender'].value_counts()"
@@ -238,7 +254,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "twitter_df['sentiment'].value_counts()"
@@ -262,7 +280,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "twitter_df['source_spam_probability'].value_counts()"
@@ -278,7 +298,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#we only look at the locations for the languages we care about, as location seems to be language dependent\n",
@@ -299,7 +321,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "twitter_df.count() #give us number of NAN"
@@ -317,7 +341,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pd.set_option('display.max_colwidth', -1)\n",
@@ -336,7 +362,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "twitter_df.main[twitter_df.main.map(lambda x: 'http://' in x)].head(10)"
@@ -354,7 +382,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pd.set_option('display.max_colwidth', 100)\n",
@@ -380,7 +410,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "twitter_df[twitter_df['main'].map(lambda x: 'therapie' in x) ]['main'] #adds instead of personal reference\n",
@@ -398,7 +430,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "twitter_df[twitter_df['main'].map(lambda x: 'RT ' in x) ]['main'].head()"
@@ -570,35 +604,176 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.1. tokenizing"
+    "Using Natural Language Processing (NLP) is necessary given the nature of our dataset: tweets. Following the steps used in previous courses and in the papers we read, we came up with the following pipeline in order to process the tweets (and dictionary). Unlike the previous part, we only used local functions instead of a scaled up version using Spark.\n",
+    "\n",
+    "_Note: we use nltk, a goto python NLP library which was very interesting for us as it offered operations in the various languages we are working on._"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem.snowball import SnowballStemmer\n",
+    "\n",
+    "def process_words(language):\n",
+    "    lang = language[:2]\n",
+    "    if language == 'german':\n",
+    "        lang = 'de'\n",
+    "    \n",
+    "    stemmer = SnowballStemmer(language)\n",
+    "    lang_set = stopwords.words(language)\n",
+    "        \n",
+    "    cleaned.loc[cleaned['lang'] == lang, 'main'] = cleaned.loc[cleaned['lang'] == lang, 'main'].str.split().\\\n",
+    "        apply(lambda tweet: [word for word in tweet if word not in lang_set]).\\\n",
+    "        apply(lambda tweet: [stemmer.stem(word) for word in tweet])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.2 stop word removal"
+    "### 3.1. Tokenizing"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.3 stemming"
+    "The first important step in NLP is to divide the words of every tweet in a table to be able to easily treat them. It is easily done using the _'split'_ method provided in python. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cleaned['main'] = cleaned['main'].str.split()\n",
+    "cleaned.head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.4 dictionary processing"
+    "### 3.2 Stop words Removal"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### building the dictionary"
+    "To have relevant tweets, it is necessary to remove useless words which would interfere with our analysis. We assumed stop words were the only important words to remove (as we already dealt with special characters and urls)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def remove_stops(language):\n",
+    "    lang = language[:2]\n",
+    "    if language == 'german':\n",
+    "        lang = 'de'\n",
+    "    \n",
+    "    lang_set = stopwords.words(language)\n",
+    "        \n",
+    "    cleaned.loc[cleaned['lang'] == lang, 'main'] = cleaned.loc[cleaned['lang'] == lang, 'main'].\\\n",
+    "        apply(lambda tweet: [word for word in tweet if word not in lang_set])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "remove_stops('english')\n",
+    "remove_stops('french')\n",
+    "remove_stops('german')\n",
+    "cleaned.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.3 Stemming"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The final step of our NLP treatement pipeline is stemming. The idea is that words appearing in multiple forms (such as have, having, had, …) should only be considered once using their radical (e.g. \"hav\")."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from nltk.stem.snowball import SnowballStemmer\n",
+    "\n",
+    "def stem_words(language):\n",
+    "    lang = language[:2]\n",
+    "    if language == 'german':\n",
+    "        lang = 'de'\n",
+    "    \n",
+    "    stemmer = SnowballStemmer(language)\n",
+    "        \n",
+    "    cleaned.loc[cleaned['lang'] == lang, 'main'] = cleaned.loc[cleaned['lang'] == lang, 'main'].\\\n",
+    "        apply(lambda tweet: [stemmer.stem(word) for word in tweet])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "stem_words('english')\n",
+    "stem_words('french')\n",
+    "stem_words('german')\n",
+    "cleaned.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.4 Dictionary processing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we applied all of these methods to our dataset, it is only natural that we do the same for the dictionary we will use. The first step of this part explains how we built the dictionary (and cleaned it as we did before) while the second part focuses on applying the previous NLP methods to the dictionary."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  building the dictionary"
    ]
   },
   {
@@ -663,11 +838,6 @@
    "source": [
     "LDA to find similarities"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -741,6 +911,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [default]",
    "language": "python",
@@ -756,7 +927,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
